[OVM-33] add sending task solution as file
